--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
       <h3 class="text-4xl font-bold ">Fetured Bikes In This Year</h3>
       <p class="text-red-500">Best bike collection</p>
     </div>
-    <div class="lg:flex mt-7 justify-center">
+    <div class="lg:flex mt-7 justify-center space-y-6">
       <div><img src="images/slider/bike2.png" alt=""></div>
       <div><img src="images/slider/bike3.png" alt=""></div>
       <div><img src="images/slider/bike4.png" alt=""></div>
@@ -131,6 +131,40 @@
             </div>
           </div>
         </div>
+
+      </div>
+    </section>
+    <section class="lg:flex justify-center mt-10 space-y-5 gap-6">
+      <div class="w-80 border rounded-xl p-5">
+        <img src="images/others/user-1.png" alt="">
+        <p>Slate helps you see how
+          many more days you need
+          to work to reach your financial
+          goal for the month and year.</p>
+        <h5 class="text-2xl text-blue-500">Regina Miles</h5>
+        <h4>Bankar</h4>
+      </div>
+      <div class="w-80 border rounded p-5">
+        <img src="images/others/user-2.png" alt="">
+        <p>Slate helps you see how
+          many more days you need
+          to work to reach your financial
+          goal for the month and year.</p>
+        <h5 class="text-2xl text-blue-500">Regina Miles</h5>
+        <h4>Bankar</h4>
+      </div>
+      <div class="w-80 border rounded p-5">
+        <img src="images/others/user-3.png" alt="">
+        <p>Slate helps you see how
+          many more days you need
+          to work to reach your financial
+          goal for the month and year.</p>
+        <h5 class="text-2xl text-blue-500">Regina Miles</h5>
+        <h4>Bankar</h4>
+      </div>
+
+
+      <div>
 
       </div>
     </section>
