--- a/index.html
+++ b/index.html
@@ -134,39 +134,92 @@
 
       </div>
     </section>
-    <section class="lg:flex justify-center mt-10 space-y-5 gap-6">
-      <div class="w-80 border rounded-xl p-5">
+    <section class="lg:flex justify-center  space-y-5 gap-6 mb-8">
+      <div class="w-80 border rounded space-y-3 p-5">
         <img src="images/others/user-1.png" alt="">
         <p>Slate helps you see how
           many more days you need
           to work to reach your financial
           goal for the month and year.</p>
         <h5 class="text-2xl text-blue-500">Regina Miles</h5>
-        <h4>Bankar</h4>
+        <h4 class="text-2xl">Bankar</h4>
       </div>
-      <div class="w-80 border rounded p-5">
+      <div class="w-80 border rounded space-y-3  p-5">
         <img src="images/others/user-2.png" alt="">
         <p>Slate helps you see how
           many more days you need
           to work to reach your financial
           goal for the month and year.</p>
         <h5 class="text-2xl text-blue-500">Regina Miles</h5>
-        <h4>Bankar</h4>
+        <h4 class="text-2xl">Bankar</h4>
       </div>
-      <div class="w-80 border rounded p-5">
+      <div class="w-80 border rounded space-y-3  p-5">
         <img src="images/others/user-3.png" alt="">
         <p>Slate helps you see how
           many more days you need
           to work to reach your financial
           goal for the month and year.</p>
         <h5 class="text-2xl text-blue-500">Regina Miles</h5>
-        <h4>Bankar</h4>
+        <h4 class="text-2xl">Bankar</h4>
       </div>
 
 
       <div>
 
       </div>
+    </section>
+    <h1 class="text-5xl text-center font-bold mb-5">Frequently Asked <span class="text-red-500">Questions</span></h1>
+    <section class="lg:flex justify-center items-center lg:ml-52 ">
+      <div>
+        <img src="images/others/faq.png" alt="">
+      </div>
+      <div>
+        <div class="collapse collapse-arrow  bg-base-200 lg:w-3/5 ">
+          <input type="radio" name="my-accordion-2" checked="checked" />
+          <div class="collapse-title text-xl font-medium">What are the most important things I should
+            know about riding a bike?</div>
+          <div class="collapse-content">
+            <p>Safety First! Always obey the rules of the road. Obey all traffic signals, signs, and laws. Get in the
+              mindset of
+              “driving” your bike—not just “riding” your bike. This will help you be a more focused and legally
+              compliant bike rider.</p>
+          </div>
+        </div>
+        <div class="collapse collapse-arrow bg-base-200 lg:w-3/5 ">
+          <input type="radio" name="my-accordion-2" />
+          <div class="collapse-title text-xl font-medium">How can I tell if my helmet is old and I need a
+            new one?</div>
+          <div class="collapse-content">
+            <p>Safety First! Always obey the rules of the road. Obey all traffic signals, signs, and laws. Get in the
+              mindset of
+              “driving” your bike—not just “riding” your bike. This will help you be a more focused and legally
+              compliant bike rider.</p>
+          </div>
+        </div>
+        <div class="collapse collapse-arrow bg-base-200 lg:w-3/5 ">
+          <input type="radio" name="my-accordion-2" />
+          <div class="collapse-title text-xl font-medium">How can I tell if my helmet is old and I need a
+            new one?</div>
+          <div class="collapse-content">
+            <p>Safety First! Always obey the rules of the road. Obey all traffic signals, signs, and laws. Get in the
+              mindset of
+              “driving” your bike—not just “riding” your bike. This will help you be a more focused and legally
+              compliant bike rider.</p>
+          </div>
+        </div>
+        <div class="collapse collapse-arrow bg-base-200 lg:w-3/5 ">
+          <input type="radio" name="my-accordion-2" />
+          <div class="collapse-title text-xl font-medium">How can I tell if my helmet is old and I need a
+            new one?</div>
+          <div class="collapse-content">
+            <p>Safety First! Always obey the rules of the road. Obey all traffic signals, signs, and laws. Get in the
+              mindset of
+              “driving” your bike—not just “riding” your bike. This will help you be a more focused and legally
+              compliant bike rider.</p>
+          </div>
+        </div>
+      </div>
+
     </section>
   </main>
 
