--- a/index.html
+++ b/index.html
@@ -224,7 +224,34 @@
   </main>
 
   <footer>
+    <footer class="footer bg-green-500 text-base-content mt-10 p-10 justify-center space-x-10">
+      <nav class="space-y-10">
+        <div class="flex gap-9 text-white">
+          <h6 class="footer-title text-3xl font-bold">Services</h6>
+          <h6 class="footer-title  text-3xl font-bold">Company</h6>
+        </div>
+        <div class="lg:flex gap-10 text-white grid"><a class="link link-hover">About us</a>
+          <a class="link link-hover">Contact</a>
+          <a class="link link-hover">Jobs</a>
+          <a class="link link-hover">Press kit</a>
+          <a class="link link-hover">Branding</a>
+        </div>
+        <p class="text-white">© 2020 bike. All rights reserved</p>
 
+      </nav>
+      <nav>
+
+      </nav>
+      <nav>
+        <h6 class="footer-title text-4xl fonte-bold">get the app</h6>
+        <div class="grid flex-1   gap-4">
+          <img src="images/others/android.png" alt="">
+          <img src="images/others/ios.png" alt="">
+
+
+        </div>
+      </nav>
+    </footer>
   </footer>
 </body>
 
